# Kyma

./: .gitignore  DESIGN_SYSTEM.md  HACKATHON_READINESS.md  LICENSE  README.md  SECURITY.md  build-terminal.sh  gemui-transmit-final.md  gradle.properties  settings.gradle.kts  skills-lock.json
PEEP/: kyma-all-designs.jsx
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/sonicvault/app/: BackupRecoverE2ETest.kt  TestRunner.kt
app/src/debug/java/com/sonicvault/app/: FakeAttestationProvider.kt  TestSonicVaultApplication.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: recovery_checklist.md
app/src/main/cpp/: CMakeLists.txt  ggwave_jni.cpp  secure_crypto_jni.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml  network_security_config.xml
archive/: README.md  faq_archived.md
archive/geolock_timelock/: GeoKeyDerivation.kt  GeoTimeLock.kt  GeoTimeLockScreen.kt  GpsSpoofingDetector.kt  LocationSeedMixer.kt  README.md  SntpTimeVerifier.kt
archive/qr/: QrExportScreen.kt  QrImportScreen.kt
archive/soundseed/: SoundSeedScreen.kt  SoundSeedViewModel.kt
archive/web/: solana_pay_receiver_new_ideas.html  solana_pay_receiver_newest.html  solana_pay_receiver_research.html  sonic_receive_new_ideas.html  sonic_receive_research.html
archive/zk/: ZkPassportScreen.kt  ZkSoundPassport.kt
scripts/: generate_pay_wav.py  generate_pay_wav_http.sh
(+194 files in other folders)
